Upload Zwischenstand für die Sicherung. Arbeit an der Datenbankimplementierung.

--- a/Weißer Lotus Desktop Software/Weißer Lotus Desktop Software.csproj
+++ b/Weißer Lotus Desktop Software/Weißer Lotus Desktop Software.csproj
@@ -17,4 +17,11 @@
     <Resource Include="Images\Weißer_Lotus_Logo.ico" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Models\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
+
 </Project>
