Inititalisierung der Setiten statt der Fenster, also gewollt zu Beginn nur ein Fenster mit mehreren Seite.

--- a/Weißer Lotus Desktop Software/Weißer Lotus Desktop Software.csproj
+++ b/Weißer Lotus Desktop Software/Weißer Lotus Desktop Software.csproj
@@ -7,10 +7,15 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>Images\Taskleiste.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Images\Weißer_Lotus_Logo.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Images\Taskleiste.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -31,6 +36,21 @@
     <PackageReference Include="Microsoft.Identity.Client" Version="4.59.0" />
     <PackageReference Include="Microsoft.Identity.Client.Extensions.Msal" Version="4.59.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
